tests/derive_compile_fail/unsupported_rename_all_value.rs
use snowflake_connector_rs::FromRow;

#[derive(FromRow)]
#[snowflake(rename_all = "snake_case")]
struct Bad {
    value: i64,
}

fn main() {}
